# socrates

./: .gitignore  .vercelignore  config.yaml  entities.py  main.py  pyproject.toml  test_knowledge_unit_generation.py  test_question_generation_service.py  todo.md
application/dto/: question_view.py  study_session_view.py
application/services/: question_view.py  study_session_view.py
application/use_cases/: assess_question.py  create_learning_plan.py  document_ingestion.py  generate_next_question.py  get_study_session.py  start_study_session.py  submit_answer.py  update_ku_mastery.py
backend/: config.yaml  main.py  product-definition.md  pyproject.toml  requirements.txt  todo.md
backend/application/common/: exceptions.py
backend/application/dto/: assessmentfeedback.py  create_learning_plan.py  feedback.py  question_view.py
backend/application/ports/: prompt_template_repository.py
backend/application/services/: study_session_view.py
backend/application/use_cases/: assess_question.py  create_learning_plan.py  document_ingestion.py  get_learning_plan.py  get_study_session.py  list_learning_plans.py  start_study_session.py  submit_answer.py  submit_assessment_feedback.py  submit_feedback.py  submit_question_feedback.py  update_ku_mastery.py
backend/common/: __init__.py  injectors.py
backend/domain/common/: exceptions.py
backend/domain/entities/: __init__.py  claim.py  document.py  knowledge_unit.py  learning.py  question.py
backend/domain/ports/: answer_evaluation.py  document_parser.py  feedback_service.py  knowledge_unit_generation.py  learning_plan_repository.py  question_generation.py  question_repository.py  study_focus_policy.py
backend/domain/services/: mastery.py
backend/experiments/common/metrics/: knowledge_unit_gen_rule.py
backend/experiments/exp_001/: dataset.py  main.py  prompt_factory.py  templates.py
backend/infrastructure/adapters/: answer_evaluation.py  document_parser.py  feedback_service.py  learning_plan_repository.py  question_repository.py  study_focus_policy.py
backend/infrastructure/adapters/knowledge_unit_generation/llm/: openai_client.py  prompts.py  service.py
backend/infrastructure/adapters/question_generation/llm/: batch_prompts.py  prompts.py  service.py
backend/infrastructure/api/fastapi/: app_builder.py  assess_question_api.py  create_learning_plan_api.py  get_learning_plan_api.py  get_study_session_api.py  ingest_document_api.py  list_learning_plans_api.py  start_study_session_api.py  submit_answer_api.py  submit_assessment_feedback_api.py  submit_feedback_api.py  submit_question_feedback_api.py  update_mastery_api.py
backend/tests/application/: conftest.py
backend/tests/application/use_cases/: test_assess_question.py  test_create_learning_plan.py  test_get_study_session.py  test_start_study_session.py  test_submit_answer.py  test_submit_assessment_feedback.py  test_submit_feedback.py  test_submit_question_feedback.py  test_update_ku_mastery.py
backend/tests/infrastructure/adapters/: test_document_parser.py
backend/tests/infrastructure/adapters/knowledge_unit_generation/llm/: test_knowledge_unit_generation.py
backend/tests/infrastructure/adapters/question_generation/llm/: test_batch_question_generation.py  test_question_generation_service.py
backend/tests/infrastructure/api/fastapi/end2end/: test_learning_flow.py
common/: injectors.py
domain/entities/: entities.py  knowledge_unit.py  learning.py  question.py
domain/ports/: answer_evaluation.py  document_repository.py  knowledge_unit_generation.py  learning_scope_policy.py  study_focus_policy.py
domain/services/: mastery.py
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  todo.md  types.ts  vercel.json  vite.config.ts
frontend/services/: api.ts  geminiService.ts
infrastructure/adapters/: answer_evaluation.py  document_parser.py  document_repository.py  learning_scope_policy.py
(+11 files in other folders)
