[project]
name = "socrates"
version = "0.1.0"
description = "A study assistant using LLMs to generate knowledge units, questions, and learning routines."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Galeos93", email = "galeos93@users.noreply.github.com" }
]
keywords = ["llm", "learning", "study", "ai"]
requires-python = ">=3.11,<4.0"

dependencies = [
  "openai>=1.31.0,<2.0.0",
  "dataclasses-json>=0.5.7,<0.6.0",
  "pydantic>=2.5.0,<3.0.0",
  "pdf2image>=1.16.3,<2.0.0",
  "Pillow>=10.0.0,<11.0.0",
  "fastapi>=0.109.0,<1.0.0",
  "python-multipart>=0.0.6,<1.0.0",
  "httpx>=0.26.0,<1.0.0",
  "uvicorn>=0.27.0,<1.0.0",
  "vyper-config>=1.2.0,<2.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "requests>=2.32.5,<3.0.0",
  "opik>=1.9.93,<2.0.0"
]

[project.urls]
Homepage = "https://github.com/Galeos93/socrates"
Repository = "https://github.com/Galeos93/socrates"

[project.scripts]
app = "main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
black = "^24.1.0"
isort = "^6.0.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.vercel.scripts]
build = "python build.py"
